--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "@date-io/moment": "^1.3.13",
     "@dhis2/app-runtime": "^3.10.4",
     "@dhis2/d2-i18n": "^1.1.3",
+    "@dhis2/multi-calendar-dates": "1.3.1",
     "@dhis2/ui": "^9.4.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@js-temporal/polyfill": "^0.4.4",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
@@ -68,6 +70,9 @@
     "react-select": "^3.1.0",
     "react-text-mask": "^5.4.3",
     "styled-jsx": "^3.3.0"
+  },
+  "resolutions": {
+    "@dhis2/multi-calendar-dates": "1.3.1"
   },
   "config": {
     "commitizen": {
